# duckdb-table-inspector

./: CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  extension_config.cmake
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: MainDistributionPipeline.yml
src/: inspect_block_usage.cpp  inspect_column.cpp  inspect_database.cpp  inspect_database.hpp  inspect_storage.cpp  inspect_storage_summary.cpp  table_inspector_extension.cpp  util.cpp
src/include/: inspect_block_usage.hpp  inspect_column.hpp  inspect_database.hpp  inspect_storage.hpp  inspect_storage_summary.hpp  table_inspector_extension.hpp  util.hpp
test/sql/: inspect_database.test  table_inspector.test
test/sql/inspect_block_usage/: inspect_block_usage.test
test/sql/inspect_column/: inspect_column.test
test/sql/inspect_database/: inspect_database.test  inspect_database_accuracy.test  inspect_database_inmemory.test  inspect_database_restart.test
test/sql/inspect_storage/: inspect_storage.test
test/sql/inspect_storage_summary/: inspect_storage_summary.test
test/unittest/: CMakeLists.txt  utils_test.cpp
unit/: test_util.cpp
